# yatzy_game

./: .coveragearc  .gitignore  README.md  index.py  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaaminen  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/laskarit/: README.md  gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coveragerc.save
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: gameloop.py  index.py  load_image.py  logik.py  renderer.py  rules.py  yatzy_scoreboard.py
src/GUI/: login.py  mainGUI.py  main_gui.py  register.py
src/Gameloops/: clock.py  eventqueue.py  gameloop.py  renderer.py
src/data/: database_connection.py  db.sqlite  intialize_database.py
src/repot/: yatzyrepo.py
src/sprites/: collect.py  dice.py  lock.py  number.py  roll.py  turns.py
src/tests/: eka_test.py  logik_test.py  repo_test.py  rules_test.py
