[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Juuso <juuso.saavalainen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
coverage = "^6.3.2"
invoke = "^1.7.0"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"
autopep8 = "^1.6.0"
pylint = "^2.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
